--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ecoknowledge</title>
+    <link rel="shortcut icon" href="assets/img/favicon.ico">
 
     <!-- libs -->
     <link rel="stylesheet" href="assets/libs/bootstrap.min.css">
@@ -13,24 +14,26 @@
     <!-- styles -->
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/badge.css">
+    <link rel="stylesheet" href="assets/css/user.css">
 
     <!-- modules -->
     <script src="app/app.module.js"></script>
-    <script src="app/shared/navbar/navbar.mdl.js"></script>
+    <script src="app/components/navbar/navbar.mdl.js"></script>
     <script src="app/components/home/home.mdl.js"></script>
     <script src="app/components/challenges/challenges.mdl.js"></script>
     <script src="app/components/users/users.mdl.js"></script>
-    <script src="app/components/myProfile/myProfile.mdl.js"></script>
+    <script src="app/components/profile/profile.mdl.js"></script>
 
     <!-- controllers -->
-    <script src="app/shared/navbar/navbar.ctrl.js"></script>
+    <script src="app/components/navbar/navbar.ctrl.js"></script>
     <script src="app/components/home/home.ctrl.js"></script>
     <script src="app/components/challenges/challenges.ctrl.js"></script>
     <script src="app/components/users/users.ctrl.js"></script>
-    <script src="app/components/myProfile/myProfile.ctrl.js"></script>
+    <script src="app/components/profile/profile.ctrl.js"></script>
 
     <!-- directives -->
     <script src="app/shared/challenge/challenge.dir.js"></script>
+    <script src="app/shared/user/user.dir.js"></script>
 
     <!-- responsivity -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +41,7 @@
 <body ng-app="ecoknowledgeApp">
 
 <!-- navbar -->
-<ng-include src="'app/shared/navbar/navbar.view.html'"></ng-include>
+<ng-include src="'app/components/navbar/navbar.view.html'"></ng-include>
 
 <!-- content -->
 <div ng-view class="content"></div>
