--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="app/components/challenges/challenges.mdl.js"></script>
     <script src="app/components/users/users.mdl.js"></script>
     <script src="app/components/profile/profile.mdl.js"></script>
+    <script src="app/shared/authentication/authentication.mdl.js"></script>
 
     <!-- controllers -->
     <script src="app/components/navbar/navbar.ctrl.js"></script>
@@ -30,10 +31,14 @@
     <script src="app/components/challenges/challenges.ctrl.js"></script>
     <script src="app/components/users/users.ctrl.js"></script>
     <script src="app/components/profile/profile.ctrl.js"></script>
+    <script src="app/shared/authentication/authentication.ctrl.js"></script>
 
     <!-- directives -->
     <script src="app/shared/challenge/challenge.dir.js"></script>
     <script src="app/shared/user/user.dir.js"></script>
+
+    <!-- services -->
+    <script src="app/shared/authentication/authentication.serv.js"></script>
 
     <!-- responsivity -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
