--- a/app/shared/user/user.view.html
+++ b/app/shared/user/user.view.html
@@ -4,10 +4,10 @@
     <div class="panel panel-default user-panel">
         <div class="panel-body user-padding">
             <!-- image -->
-            <div ng-show="user.profilePic"><img class="img-responsive img-circle user-pic" ng-src="{{user.profilePic}}"/></div>
-            <div ng-show="!user.profilePic"><img class="img-responsive img-circle user-pic" src="http://i1.wp.com/www.techrepublic.com/bundles/techrepubliccore/images/icons/standard/icon-user-default.png"/></div>
+            <img ng-show="user.profilePic" class="img-responsive img-circle user-pic user-pic-sm" ng-src="{{user.profilePic}}"/>
+            <img ng-show="!user.profilePic" class="img-responsive img-circle user-pic user-pic-sm" src="assets/img/user-default.png"/>
             <!-- name -->
-            <h4 class="truncate">{{user.firstName}} {{user.lastName}}</h4>
+            <h4 class="truncate">{{user.firstName}} {{user.lastName.toUpperCase()}}</h4>
         </div>
     </div>
     </a>
