Page des défis. Modification de CSS

--- a/app/shared/authentication/authentication.view.html
+++ b/app/shared/authentication/authentication.view.html
@@ -22,7 +22,7 @@
                 Se connecter
             </button>
             <p class="help-block">
-                <a class="pull-left text-muted" ng-href="#"> <!-- TODO -->
+                <a class="pull-left text-muted" ng-href="#"> <!-- TODO sign in -->
                     <small>S'inscrire</small>
                 </a>
             </p>
