--- a/app/shared/challenge/challenge.view.html
+++ b/app/shared/challenge/challenge.view.html
@@ -5,7 +5,7 @@
             <!-- top-right icon -->
             <span ng-show="challenge.levelAcquired" class="glyphicon glyphicon-ok badge-glyphicon"></span>
             <!-- image -->
-            <img class="img-responsive img-circle badge-img" ng-src="{{challenge.image}}"/>
+            <img class="img-responsive img-circle badge-img center-block" ng-src="{{challenge.image}}"/>
             <!-- title -->
             <h4 class="badge-title truncate">{{challenge.name}}</h4>
             <!-- subtitle -->
@@ -14,30 +14,27 @@
                 ({{challenge.levelAcquired}}/{{challenge.levels.length}})
             </p>
             <!-- time bar -->
-            <div ng-show="challenge.timePercent" class="progress badge-margin-top badge-no-margin-bot">
-                <div class="progress-bar progress-bar-info" role="progressbar"
-                     aria-valuemin="0" aria-valuemax="100" ng-style="{width : challenge.timePercent+'%'}">
-                    <span class="glyphicon glyphicon-time"></span>&nbsp{{challenge.timePercent}}%
-                </div>
-            </div>
+            <uib-progressbar class="badge-margin-top badge-no-margin-bot" ng-show="challenge.timePercent" max="100"
+                             value="challenge.timePercent" type="info"><span class="glyphicon glyphicon-time"></span>&nbsp{{challenge.timePercent}}%
+            </uib-progressbar>
+
             <!-- progress bar -->
-            <div ng-show="challenge.progressPercent" class="progress badge-margin-top badge-no-margin-bot">
-                <div class="progress-bar progress-bar-success" role="progressbar"
-                     aria-valuemin="0" aria-valuemax="100" ng-style="{width : challenge.progressPercent+'%'}">
-                    <span class="glyphicon glyphicon-tasks"></span>&nbsp{{challenge.progressPercent}}%
-                </div>
-            </div>
+            <uib-progressbar class="badge-margin-top badge-no-margin-bot" ng-show="challenge.progressPercent" max="100"
+                             value="challenge.timePercent" type="success"><span
+                    class="glyphicon glyphicon-tasks"></span>&nbsp{{challenge.progressPercent}}%
+            </uib-progressbar>
         </div>
         <!-- take up button -->
-        <button ng-show="!challenge.progressPercent" type="button" class="btn btn-primary badge-bot-left"
-                ng-click="takeUpChallenge()">Relever
+        <div style="position: absolute;bottom:10px; left:15px;right:15px;">
+            <button ng-show="!challenge.progressPercent" type="button" class="btn btn-primary center-block"
+                    ng-click="takeUpChallenge()">Relever !
+            </button>
+        </div>
+        <!--<button ng-show="!challenge.progressPercent" type="button" class="btn btn-primary badge-bot-left"
+                ng-click="takeUpChallenge()">Relever !
         </button>
         <button type="button" class="btn btn-info badge-bot-right"
                 ng-click="moreInfo()">Details
-        </button>
-
-        <!--<div class="panel-footer" style="position: absolute; bottom: 0px; left:15px; right:15px">
-            Plus...
-        </div>-->
+        </button>-->
     </div>
 </div>
