--- a/app/shared/user/user.view.html
+++ b/app/shared/user/user.view.html
@@ -4,8 +4,8 @@
     <div class="panel panel-default user-panel">
         <div class="panel-body user-padding">
             <!-- image -->
-            <img ng-show="user.profilePic" class="img-responsive img-circle user-pic user-pic-sm" ng-src="{{user.profilePic}}"/>
-            <img ng-show="!user.profilePic" class="img-responsive img-circle user-pic user-pic-sm" src="assets/img/user-default.png"/>
+            <img ng-show="user.profilePic" class="img-responsive img-circle user-pic user-pic-sm center-block" ng-src="{{user.profilePic}}"/>
+            <img ng-show="!user.profilePic" class="img-responsive img-circle user-pic user-pic-sm center-block" src="assets/img/user-default.png"/>
             <!-- name -->
             <h4 class="truncate">{{user.firstName}} {{user.lastName.toUpperCase()}}</h4>
         </div>
