Ajout de propriétés sur les profils. Ajout d'une modal de connexion. Modification de CSS

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="app/components/users/users.ctrl.js"></script>
     <script src="app/components/profile/profile.ctrl.js"></script>
     <script src="app/shared/authentication/authentication.ctrl.js"></script>
+    <script src="app/shared/authentication/authentication.modal.ctrl.js"></script>
 
     <!-- directives -->
     <script src="app/shared/challenge/challenge.dir.js"></script>
