--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="app/components/users/users.mdl.js"></script>
     <script src="app/components/profile/profile.mdl.js"></script>
     <script src="app/shared/authentication/authentication.mdl.js"></script>
+    <script src="app/shared/registration/registration.mdl.js"></script>
 
     <!-- controllers -->
     <script src="app/components/navbar/navbar.ctrl.js"></script>
@@ -33,6 +34,7 @@
     <script src="app/components/profile/profile.ctrl.js"></script>
     <script src="app/shared/authentication/authentication.ctrl.js"></script>
     <script src="app/shared/authentication/authentication.modal.ctrl.js"></script>
+    <script src="app/shared/registration/registration.ctrl.js"></script>
 
     <!-- directives -->
     <script src="app/shared/challenge/challenge.dir.js"></script>
