--- a/app/shared/authentication/authentication.view.html
+++ b/app/shared/authentication/authentication.view.html
@@ -1,31 +1,19 @@
 <form accept-charset="UTF-8" role="form" method="post" ng-submit="onSubmit()" ng-controller="authenticationCtrl">
-    <h4 class="">
+    <h4 style="text-align: center">
         Connexion
     </h4>
     <fieldset>
-        <div class="form-group input-group">
-          <span class="input-group-addon">
-            @
-          </span>
-            <input class="form-control" placeholder="Email" ng-model="mail" type="email" required="">
+        <div class="form-group input-group" style="width:100%">
+            <input class="form-control" placeholder="Email" ng-model="mail" type="email" style="border-radius:4px" required="">
         </div>
-        <div class="form-group input-group">
-          <span class="input-group-addon">
-            <i class="glyphicon glyphicon-lock">
-            </i>
-          </span>
+        <div class="form-group input-group" style="width:100%">
             <input class="form-control" placeholder="Mot de passe" ng-model="password" type="password" value=""
-                   required="">
+                   style="border-radius:4px" required="">
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-block">
                 Se connecter
             </button>
-            <p class="help-block">
-                <a class="pull-left text-muted" ng-href="#"> <!-- TODO sign in -->
-                    <small>S'inscrire</small>
-                </a>
-            </p>
         </div>
     </fieldset>
 </form>
