--- a/app/shared/authentication/authentication.modal.view.html
+++ b/app/shared/authentication/authentication.modal.view.html
@@ -1,14 +1,17 @@
 <form accept-charset="UTF-8" role="form" method="post" ng-submit="onSubmit()">
+    <!-- title -->
     <div class="modal-header">
         <h3 class="modal-title">Connexion</h3>
     </div>
     <div class="modal-body">
+        <!-- mail -->
         <div class="form-group input-group">
           <span class="input-group-addon">
             @
           </span>
             <input class="form-control" placeholder="Email" ng-model="mail" type="email" required="">
         </div>
+        <!-- password -->
         <div class="form-group input-group" style="margin-bottom:0">
           <span class="input-group-addon">
             <i class="glyphicon glyphicon-lock">
@@ -19,6 +22,7 @@
         </div>
     </div>
     <div class="modal-footer">
+        <!-- submit -->
         <button type="submit" class="btn btn-primary">
             Se connecter
         </button>
