--- a/app/shared/authentication/authentication.view.html
+++ b/app/shared/authentication/authentication.view.html
@@ -1,11 +1,14 @@
 <form accept-charset="UTF-8" role="form" method="post" ng-submit="onSubmit()" ng-controller="authenticationCtrl">
+    <!-- title -->
     <h4 style="text-align: center">
         Connexion
     </h4>
     <fieldset>
+        <!-- mail -->
         <div class="form-group input-group" style="width:100%">
             <input class="form-control" placeholder="Email" ng-model="mail" type="email" style="border-radius:4px" required="">
         </div>
+        <!-- password -->
         <div class="form-group input-group" style="width:100%">
             <input class="form-control" placeholder="Mot de passe" ng-model="password" type="password" value=""
                    style="border-radius:4px" required="">
