--- a/app/shared/registration/registration.view.html
+++ b/app/shared/registration/registration.view.html
@@ -1,26 +1,32 @@
 <form accept-charset="UTF-8" role="form" method="post" ng-submit="onSubmit()" ng-controller="registrationCtrl">
+    <!-- title -->
     <h4 style="text-align: center">
         Inscription
     </h4>
     <fieldset>
+        <!-- first name -->
         <div class="form-group input-group" style="width:100%">
             <input class="form-control" placeholder="Pr&eacute;nom" ng-model="firstName" style="border-radius: 4px"
                    required="">
         </div>
+        <!-- last name -->
         <div class="form-group input-group" style="width:100%">
             <input class="form-control" placeholder="Nom" ng-model="lastName" style="border-radius: 4px"
                    required="">
         </div>
+        <!-- mail -->
         <div class="form-group input-group" style="width:100%">
             <input class="form-control" placeholder="Email" ng-model="mail" type="email" style="border-radius: 4px"
                    required="">
         </div>
+        <!-- password -->
         <div class="form-group input-group" style="width:100%">
             <input class="form-control" placeholder="Mot de passe" ng-model="password" type="password"
                    style="border-radius: 4px" value=""
                    required="">
         </div>
         <div class="form-group">
+            <!-- submit -->
             <button type="submit" class="btn btn-primary btn-block">
                 S'inscrire
             </button>
