Ajout de cookie. Modification de CSS. Ajout de "tous les défis" dans les profils

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/libs/bootstrap.min.css">
     <script src="assets/libs/angular.min.js"></script>
     <script src="assets/libs/angular-route.min.js"></script>
+    <script src="assets/libs/angular-cookies.min.js"></script>
     <script src="assets/libs/ui-bootstrap-tpls-0.14.3.min.js"></script>
 
     <!-- styles -->
@@ -21,7 +22,9 @@
     <script src="app/components/navbar/navbar.mdl.js"></script>
     <script src="app/components/home/home.mdl.js"></script>
     <script src="app/components/challenges/challenges.mdl.js"></script>
+    <script src="app/shared/challenge/challenge.mdl.js"></script>
     <script src="app/components/users/users.mdl.js"></script>
+    <script src="app/shared/user/user.mdl.js"></script>
     <script src="app/components/profile/profile.mdl.js"></script>
     <script src="app/shared/authentication/authentication.mdl.js"></script>
     <script src="app/shared/registration/registration.mdl.js"></script>
@@ -30,6 +33,7 @@
     <script src="app/components/navbar/navbar.ctrl.js"></script>
     <script src="app/components/home/home.ctrl.js"></script>
     <script src="app/components/challenges/challenges.ctrl.js"></script>
+    <script src="app/shared/challenge/challenge.modal.ctrl.js"></script>
     <script src="app/components/users/users.ctrl.js"></script>
     <script src="app/components/profile/profile.ctrl.js"></script>
     <script src="app/shared/authentication/authentication.ctrl.js"></script>
