--- a/app/shared/challenge/challenge.view.html
+++ b/app/shared/challenge/challenge.view.html
@@ -1,11 +1,12 @@
 <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 badge-container">
     <!-- panel -->
     <div class="panel panel-default badge-panel">
-        <div class="panel-body badge-padding">
+        <div class="panel-body badge-padding pointer-hover" ng-click="moreInfo(challenge)">
             <!-- top-right icon -->
             <span ng-show="challenge.levelAcquired" class="glyphicon glyphicon-ok badge-glyphicon"></span>
             <!-- image -->
-            <img class="img-responsive img-circle badge-img center-block" ng-src="{{challenge.image}}"/>
+            <img ng-show="challenge.image" class="img-responsive img-circle badge-img center-block" ng-src="{{challenge.image}}"/>
+            <img ng-show="!challenge.image" class="img-responsive img-circle badge-img center-block" src="assets/img/challenge-default.jpg"/>
             <!-- title -->
             <h4 class="badge-title truncate">{{challenge.name}}</h4>
             <!-- subtitle -->
@@ -13,21 +14,24 @@
                 {{challenge.levels[challenge.levelAcquired-1].name}}
                 ({{challenge.levelAcquired}}/{{challenge.levels.length}})
             </p>
-            <!-- time bar -->
-            <uib-progressbar class="badge-margin-top" style="margin-bottom: 0; margin-top:10px" ng-show="challenge.timePercent" max="100"
-                             value="challenge.timePercent" type="info"><span class="glyphicon glyphicon-time"></span>&nbsp{{challenge.timePercent}}%
-            </uib-progressbar>
 
-            <!-- progress bar -->
-            <uib-progressbar class="badge-margin-top" style="margin-bottom: 0; margin-top:10px" ng-show="challenge.progressPercent" max="100"
-                             value="challenge.progressPercent" type="success"><span
-                    class="glyphicon glyphicon-tasks"></span>&nbsp{{challenge.progressPercent}}%
-            </uib-progressbar>
+            <div ng-show="challenge.timePercent" class="badge-footer">
+                <!-- time bar -->
+                <uib-progressbar class="badge-progressbar" style="margin-bottom: 0" max="100"
+                                 value="challenge.timePercent" type="info"><span class="glyphicon glyphicon-time"></span>&nbsp{{challenge.timePercent}}%
+                </uib-progressbar>
+
+                <!-- progress bar -->
+                <uib-progressbar class="badge-progressbar" style="margin-bottom: 0;" max="100"
+                                 value="challenge.progressPercent" type="success"><span
+                        class="glyphicon glyphicon-tasks"></span>&nbsp{{challenge.progressPercent}}%
+                </uib-progressbar>
+            </div>
         </div>
         <!-- take up button -->
-        <div class="badge-footer">
-            <button ng-show="!challenge.progressPercent" type="button" class="btn btn-primary center-block"
-                    ng-click="takeUpChallenge()">Challenge accepted !
+        <div ng-show="!challenge.progressPercent" class="badge-footer">
+            <button type="button" class="btn btn-primary center-block"
+                    ng-click="takeUpChallenge()">Relever !
             </button>
         </div>
     </div>
