Ajout d'icônes dans la navbar. Ajout d'un padding à droite de la navbar. Modification de CSS

--- a/app/shared/challenge/challenge.modal.view.html
+++ b/app/shared/challenge/challenge.modal.view.html
@@ -1,4 +1,4 @@
-<div>
+<div class="modal-content">
     <div class='modal-header'>
         <!-- title -->
         <h2 style="margin:0;"><span class="important">{{challenge.name}}</span><span ng-show="challenge.levelAcquired"
