Dernier commit avant accordion

--- a/app/shared/challenge/challenge.modal.view.html
+++ b/app/shared/challenge/challenge.modal.view.html
@@ -48,7 +48,7 @@
         </uib-progressbar>
 
         <!-- levels -->
-        <h3 class="badge-level-title">Niveaux</h3>
+        <h3 class="badge-level-title" style="margin-bottom:0">Niveaux</h3>
 
         <div class="row">
             <div class="col-xs-12 col-md-6" style="margin-top:10px" ng-repeat="level in challenge.levels">
