--- a/app/shared/registration/registration.view.html
+++ b/app/shared/registration/registration.view.html
@@ -6,7 +6,7 @@
     <fieldset>
         <!-- first name -->
         <div class="form-group input-group" style="width:100%">
-            <input class="form-control" placeholder="Pr&eacute;nom" ng-model="firstName" style="border-radius: 4px"
+            <input class="form-control" placeholder="Prénom" ng-model="firstName" style="border-radius: 4px"
                    required="">
         </div>
         <!-- last name -->
